! Header z-index, EDGE bug

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -15,7 +15,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   height: $headerHeight;
   background-color: $headerBackground;
   font-weight: 300;
